# Enigma

./: Cargo.toml  LICENSE  LISEZMOI.md  README.md
android_bindings/: CMakeLists.txt  build.gradle
android_bindings/src/main/java/com/enigma/: EnigmaBridge.kt
nodes/: Cargo.toml  config.toml
nodes/src/: consensus.rs  consensus_tests.rs  db.rs  doc_db.md  doc_server.md  main.rs  server.rs  server_tests.rs
nodes/tests/: README.md
src/: app.rs  app_e2e.rs  app_tests.rs  doc_app.md  lib.rs
src/crypto/: doc_encryption.md  encryption.rs  handshake.rs  mod.rs  ratchet.rs  ratchet_tests.rs  signature.rs
src/models/: group.rs  message.rs  user.rs
src/network/: discovery.rs  mod.rs  signaling.rs  webrtc_client.rs
src/storage/: db.rs  persistence.rs
src/ui/: mod.rs
