[package]
name = "enigma"
version = "0.1.0"
authors = ["Sébastien TLX <gladius33@tuta.io>"]
edition = "2025"
description = "Enigma - Uncensorable serverless E2EE P2P private messaging"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1", features = ["full"] }
webrtc = "0.6"
ring = "0.16"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
jni = "0.19"
log = "0.4"
env_logger = "0.9"
thiserror = "1.0"
flate2 = "1.0"
qrcode = "0.12"

[features]
default = []
android = ["jni"]
